Change picture path

--- a/Chap5-RadonBkgStudy.tex
+++ b/Chap5-RadonBkgStudy.tex
@@ -22,9 +22,10 @@ The SuperNEMO experiment is designed to search for neutrinoless double beta deca
 \noindent The observable signal for double beta decay is a peak which corresponds to the $Q_{\beta \beta}$ value of the decay, which for $^{82}$Se is at 2.995 MeV. Considering the energy lost by the electron leaving the foil and crossing
 the tracker volume, and the energy resolution of the calorimeter, the peak gets smeared out into a wide bump centered at 2.995~MeV. Figure~\ref{energySpectrum} shows the signal ($\beta \beta 0 \nu$ in red) and the main backgrounds ($\beta \beta 2 \nu$ in blue, $^{214}$Bi in orange and $^{208}$Tl in green) as expected in the SuperNEMO experiment after an exposure of 21 kg$\cdot$y and $A(^{208}$Tl)~=~2~$\mu Bq/kg$  and  $A(^{214}$Bi)~=~10 $\mu Bq/kg$.
 
+
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.60]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/tot_energy_spectrum.pdf}
+\includegraphics[scale=0.60]{pictures/Chap5/tot_energy_spectrum.pdf}
 \caption{Energy spectrum of the sum of the 2 electrons for the $\beta \beta 0 \nu$ signal (red) and the different backgrounds ($\beta \beta 2 \nu$ in blue, $^{214}Bi$ in orange and $^{208}Tl$ in green). The energy spectrum takes the SuperNEMO detector response into account.}
 \label{energySpectrum}
 \end{center}
@@ -34,21 +35,24 @@ the tracker volume, and the energy resolution of the calorimeter, the peak gets 
 \noindent The main sources of background to the $\beta \beta 0 \nu$ search are the irreducible background from $\beta \beta 2 \nu$ decay and the decays of $^{214}$Bi and $^{208}$Tl originating from the natural chains of $^{238}$U and $^{232}$Th. Due to their high Q-value, the electrons emitted in the decays of $^{214}$Bi and $^{208}$Tl can mimic 2e signal by means of different mechanisms as
 shown in Figure~\ref{Backgroungs}. The combination of the tracking and the calorimetry techniques allow to have independant analysis channels to measure the different background contributions.
 
+
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/internal_bkg.pdf}
+\includegraphics[scale=0.5]{pictures/Chap5/internal_bkg.pdf}
 \caption{Background processes coming from the foil which mimic the two electrons events. On the left : beta decay and internal conversion. In the center : beta decay and M\o ller scattering. On the right : beta decay and Compton scattering.}
 \label{Backgroungs}
 \end{center}
 \end{figure}
 
+
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/decay_chain_bi.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/decay_chain_bi.pdf}
 \caption{The $^{214}$Bi decay chain. The first decay emits an electron with $Q_{\beta} = 3.27$MeV. The daughter $^{214}$Po then decays by emitting a monoenergetic alpha particle, $\text{E}_{\alpha} = 7.8 MeV$. The half-life of $^{214}$Po is 164.6~$\pm$~0.3$\mu$s.}
 \label{BiPoChain}
 \end{center}
 \end{figure}
+
 
 \bigskip 
 
@@ -236,7 +240,7 @@ Electron energy [MeV]  & published values & this study \\[0.1cm]
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.32]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/energy_spectrum_all_electron.pdf}
+\includegraphics[scale=0.32]{pictures/Chap5/energy_spectrum_all_electron.pdf}
 \caption{Energy spectrum of all simulated electrons. The shape of the energy spectrum of the $^{214}$Bi beta decay is well recognized with a Q$_\beta$ of 3.27~MeV. The sharp peaks correspond to the monoenergetic electrons  emitted from internal conversions.}
 \label{energyspectrumallelectron}
 \end{center}
@@ -245,7 +249,7 @@ Electron energy [MeV]  & published values & this study \\[0.1cm]
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.43]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/energy_spectrum_internal_conversion.pdf}
+\includegraphics[scale=0.43]{pictures/Chap5/energy_spectrum_internal_conversion.pdf}
 \caption{Energy spectrum of the electrons emitted in internal conversions normalized to number of total simulated events.}
 \label{energyspectruminternalconversion}
 \end{center}
@@ -317,7 +321,7 @@ others                     &2e1$\alpha$1p1$\gamma$ & 6     & 0.002 \% \\[0.1cm]
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.25]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/drift_time.png}
+\includegraphics[scale=0.25]{pictures/Chap5/drift_time.png}
 \caption{The relation between the transversal dritf time and drift radius}
 \label{drift_time}
 \end{center}
@@ -395,7 +399,7 @@ Because of its high ionization power, the energy loss of an alpha is much larger
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.60]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/alpha_comic.pdf}
+\includegraphics[scale=0.60]{pictures/Chap5/alpha_comic.pdf}
 \caption{Visualisation of a typical alpha track coming from the source. The blue circles represent the Geiger hits and the straight line the fitted track.}
 \label{visu_alpha_typical_track}
 \end{center}
@@ -497,7 +501,7 @@ $$\text{t}_{\text{A}\alpha} - \text{t}_\alpha =  \text{t}_e  + \text{t}_d$$
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.55]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/delta_time_simu_reco.pdf}
+\includegraphics[scale=0.55]{pictures/Chap5/delta_time_simu_reco.pdf}
 \caption{The difference between the true alpha emission time and the reconstructed alpha emission time. The distribution is peaked at 0 showing that the reconstruction and the simulation are in good agreement.}
 \label{timeReco}
 \end{center}
@@ -506,7 +510,7 @@ $$\text{t}_{\text{A}\alpha} - \text{t}_\alpha =  \text{t}_e  + \text{t}_d$$
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/dessin.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/dessin.pdf}
 \caption{Visualisation of simulated (red) and reconstructed (blue) alpha. On the left, a global view is shown, on the rigth, a zoomed in view of the same event is presented. In the simulation, 5 Geiger are cells are hit (red circles) whereas only 4 cells are triggered in the reconstruction (blue circles). The blue squares represent the delayed cells found by the reconstruction, the blue circles represent drift radius estimated by TrackFit with the fitting technique. We can see in the right image that the true alpha track and the reconstructed track are very close.}
 \label{timeRecovisu}
 \end{center}
@@ -548,7 +552,7 @@ $$\text{t}_{\text{A}\alpha} - \text{t}_\alpha =  \text{t}_e  + \text{t}_d$$
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/cartoon_source_selection.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/cartoon_source_selection.pdf}
 \caption{Schema of the source selection. The green part represents the region where the events are selected.}
 \label{cartoon_source_selection}
 \end{center}
@@ -588,10 +592,10 @@ $\#$ having a negative charge  & 116 325  & 38.8  $\pm$ 0.2 \%\\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.32]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_gghits.pdf}
-\includegraphics[scale=0.32]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_length.pdf}
-\includegraphics[scale=0.32]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_energy.pdf}
-\includegraphics[scale=0.32]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_energy_log.pdf}
+\includegraphics[scale=0.32]{pictures/Chap5/source_selection_surface_gghits.pdf}
+\includegraphics[scale=0.32]{pictures/Chap5/source_selection_surface_length.pdf}
+\includegraphics[scale=0.32]{pictures/Chap5/source_selection_surface_energy.pdf}
+\includegraphics[scale=0.32]{pictures/Chap5/source_selection_surface_energy_log.pdf}
 \caption{Top left : distribution of the number of Geiger hits for the electrons. Top right~: length of the selected electron tracks. Bottom left : energy spectrum of the selected electron. Bottom right : energy spectrum in log scale}
 \label{electron_gghit_length_time_energy_sss}
 \end{center}
@@ -675,8 +679,8 @@ $\#$ having a negative charge   & 51 480  & 16.7  $\pm$ 0.2 \%\\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/length_source_charge_confusion_2.pdf}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/charge_confusion_length_source.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/length_source_charge_confusion_2.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/charge_confusion_length_source.pdf}
 \caption{On the left : length of the electron according the charge. The black curve represents all the reconstructed electrons coming from the foil and hitting the main wall. In red, the electrons coming from the source foil and hitting the main wall reconstructed with a negative charge. In blue, the electrons reconstructed with a positive or undefined charge. On the rigth : the charge confusion according the length of the electron track.}
 \label{charge_confusion_source_plots}
 \end{center}
@@ -724,8 +728,8 @@ $\#$ hitting no calorimeter & 87 316  & 29.1$\pm$ 0.2\%\\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.33]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_gghits_alpha.pdf}
-\includegraphics[scale=0.33]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/source_selection_surface_length_alpha.pdf}
+\includegraphics[scale=0.33]{pictures/Chap5/source_selection_surface_gghits_alpha.pdf}
+\includegraphics[scale=0.33]{pictures/Chap5/source_selection_surface_length_alpha.pdf}
 
 
 \caption{$(a)$ On the left, the number of Geiger hits for the alpha particles. On the right the length of the track of the alphas}
@@ -789,9 +793,9 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/alpha_length_bulk_1M.pdf}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/length_alpha_source_surface.pdf}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/alpha_length_tracker_1M.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/alpha_length_bulk_1M.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/alpha_length_surface_1M.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/alpha_length_tracker_1M.pdf}
 \caption{Alpha track length in the 1a1$\alpha$ channel. Top : event coming from the bulk. Middle : event coming from the surface of the foil. Bottom : event coming from the tracker.}
 \label{alpha_length_source_selection}
 \end{center}
@@ -829,7 +833,7 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.33]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/delayedtime.pdf}
+\includegraphics[scale=0.33]{pictures/Chap5/delayedtime.pdf}
 \caption{Time between the alpha and the electron in the identified 1a1$\alpha$ channel with the source selection}
 \label{delayedtimetopology}
 \end{center}
@@ -844,7 +848,7 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.4]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/fakeAlpha.png}
+\includegraphics[scale=0.4]{pictures/Chap5/fakeAlpha.png}
 \caption{Example of a fake alpha : a cell of the electron track (the square) is considered as delayed and identified by the Alpha Finder as an alpha particle.}
 \label{fakeAlpha}
 \end{center}
@@ -859,8 +863,8 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.312]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/angle.pdf}
-\includegraphics[scale=0.38]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/delayedTime.pdf}
+\includegraphics[scale=0.312]{pictures/Chap5/angle.pdf}
+\includegraphics[scale=0.38]{pictures/Chap5/delayedTime.pdf}
 %\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/angle_cut_optimisation.pdf}
 \caption{On the left : The angular distribution of the 1e1$\alpha$ events with the fake alphas. The angle between the electron and the fake alpha is very close to zero, so an excess of events is expected near to  cos ($\theta_{e-\alpha}$) = 1. On the right : the time distribution for events with cos($\theta_{e-\alpha}$) in [0.95 - 1]. An excess of events corresponding to fake alphas is observed for small $\Delta \text{t}$.} 
 \label{angularDistribution}
@@ -874,8 +878,8 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/fake_alpha_angle_distribution.pdf}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/fake_alpha_time_distribution.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/fake_alpha_angle_distribution.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/fake_alpha_time_distribution.pdf}
 \caption{On the left : the angular distribution of the fake alpha. On the right : the time distribution of the fake alpha.}
 \label{fakeAlphadistribution}
 \end{center}
@@ -887,8 +891,8 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/true_alpha_angle_distribution.pdf}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/true_alpha_delayed_time.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/true_alpha_angle_distribution.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/true_alpha_delayed_time.pdf}
 \caption{On the left : the angular distribution of the true alphas. On the right : the time distribution of the true alphas (note the scale on the abcissa is much larger here).}
 \label{trueAlphadistribution}
 \end{center}
@@ -914,8 +918,8 @@ $\#$ hitting no calorimeter & 32 716  & 10.9 $\pm$ 0.2\% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.4]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/efficiency_purity.pdf}
-\includegraphics[scale=0.4]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/pe.pdf}
+\includegraphics[scale=0.4]{pictures/Chap5/efficiency_purity.pdf}
+\includegraphics[scale=0.4]{pictures/Chap5/pe.pdf}
 \caption{On the top : the efficiency of the cut for the true alphas in blue and the fake alphas in red. On the bottom : the ratio of the two efficiencies. This ratio has a maximum for a cut at $\Delta \text{t}_{e-\alpha}$ = 17.0 $\mu$s.}
 \label{efficiency_ratio}
 \end{center}
@@ -955,7 +959,7 @@ $\epsilon_{\text{1e1}\alpha}$ [\%] & 2.94 & 10.07  & 1.59 \\
  
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/cartoon_tracker_selection.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/cartoon_tracker_selection.pdf}
 \caption{Schema of the tracker selection. The green part represents the region where the events are selected.}
 \label{cartoon_tracker_selection}
 \end{center}
@@ -973,8 +977,8 @@ $\epsilon_{\text{1e1}\alpha}$ [\%] & 2.94 & 10.07  & 1.59 \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/length_tracker_charge_confusion_2.pdf}
-\includegraphics[scale=0.34]{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/charge_confusion_length_tracker.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/length_tracker_charge_confusion_2.pdf}
+\includegraphics[scale=0.34]{pictures/Chap5/charge_confusion_length_tracker.pdf}
 \caption{On the left : length of the electron according the charge. The black curve represents all the reconstructed electrons hitting a calorimeter. In red, the electrons hitting a calorimeter reconstructed with a negative charge. In blue, the electrons reconstructed with a positive or undefined charge. On the rigth : the charge confusion according the length of the electron track.}
 \label{charge_confusion_tracker_plots}
 \end{center}
@@ -1124,9 +1128,9 @@ $\#$ hitting no calorimeter & 16 972  & 5.66 $ \pm $0.2 \%\\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/length_alpha_tracker_selection_bulk.pdf}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/length_alpha_tracker_selection_surface.pdf}
-\includegraphics[scale=0.39]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/length_alpha_tracker_selection_tracker.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/length_alpha_tracker_selection_bulk.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/length_alpha_tracker_selection_surface.pdf}
+\includegraphics[scale=0.39]{pictures/Chap5/length_alpha_tracker_selection_tracker.pdf}
 \caption{Time between the alpha and the electron in the identified 1a1$\alpha$ channel}
 \label{alpha_length_tracker_selection}
 \end{center}
@@ -1135,7 +1139,7 @@ $\#$ hitting no calorimeter & 16 972  & 5.66 $ \pm $0.2 \%\\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/delta_t_tracker_selection_tracker.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/delta_t_tracker_selection_tracker.pdf}
 \caption{Time between the alpha and the electron in the identified 1a1$\alpha$ channel with the tracker selection}
 \label{delta_t_tracker_selection}
 \end{center}
@@ -1185,7 +1189,7 @@ $\epsilon_{1e1\alpha}$ [$\%$] & 0.05 & 0.16  & 6.72 \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/basic_distribution_alpha_length.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/basic_distribution_alpha_length.pdf}
 \caption{Summed and normalized alpha length distribution from the 3 contributions.}
 \label{ref_distribution}
 \end{center}
@@ -1206,8 +1210,7 @@ $\epsilon_{1e1\alpha}$ [$\%$] & 0.05 & 0.16  & 6.72 \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]
-{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/alph_length_exposure_60.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/alph_length_exposure_60.pdf}
 \caption{Pseudo experiment, length of the $\alpha$ track after an exposure of 60 days.}
 \label{pseudo-experiment}
 \end{center}
@@ -1219,23 +1222,24 @@ $\epsilon_{1e1\alpha}$ [$\%$] & 0.05 & 0.16  & 6.72 \\
 
 \noindent \textbf{4) Fit the pseudo-experiment} : The pseudo-experiment is fitted with the three distributions presented in Section~5. The fit is a likelihood fit (\`a la NEMO 3) which returns the activity of each component. Figure~\ref{fit-pseudo-experiment} shows the result of the fit.
 
+
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]
-{/home/lenoblet-local/Documents/latex-papers/Alpha_Finder_note/pictures/fit_exposure_60.pdf}
+\includegraphics[scale=0.5]{pictures/Chap5/fit_exposure_60.pdf}
 \caption{Fit of the pseudo-experiment with the three contributions after an exposure of 60 days. In red, the tracker contribution. In blue, the surface contribution. In black, the bulk contribution.}
 \label{fit-pseudo-experiment}
 \end{center}
 \end{figure}
 
+
 \bigskip
+
 
 \noindent \textbf{5) Repeat 3 and 4} : The actions 3 and 4 are repeated $10^\text{5}$ times. The distribution of the fitted activity of each composant is get and plotted in~Figure~\ref{gaus}. The mean activity ($\mu$) and the sigma ($\sigma$) are recoverered. The relative error is defined as the ratio~:~$\sigma$~/~$\mu$.
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]
-{/home/lenoblet-local/Documents/Presentations/RadonSens/gaussian_bulk_activity.pdf}
+\includegraphics[scale=0.5]{pictures/Chap5/gaussian_bulk_activity.pdf}
 \caption{Distribution of the fitted activities for the bulk contribution}
 \label{gaus}
 \end{center}
@@ -1259,7 +1263,7 @@ $\epsilon_{1e1\alpha}$ [$\%$] & 0.05 & 0.16  & 6.72 \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/nexpected_source_selection.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/nexpected_source_selection.pdf}
 \caption{Number of expected events according the exposure time for the different contributions using the source selection.}
 \label{picture_number_of_expected_events_source_selection}
 \end{center}
@@ -1284,7 +1288,7 @@ $\text{N}_\text{tracker}$ & $\sim$ 60 & $\sim$ 420  & $\sim$ 900 & $\sim$ 1800 \
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.6]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/n_source_selection_last_results.pdf}
+\includegraphics[scale=0.6]{pictures/Chap5/n_source_selection_last_results.pdf}
 \caption{Number of expected events according the exposure time for the different contributions using the source selection. The relative errors using the source selection.}
 \label{picture_relative_error_source_selection}
 \end{center}
@@ -1321,7 +1325,7 @@ $(\sigma / \mu)_{\text{tracker}}$ & 18.0 \% & 6.8  \% & 4.7  \% & 3.3  \% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/nexpected_tracker_selection.pdf}
+\includegraphics[scale=0.5]{pictures/Chap5/nexpected_tracker_selection.pdf}
 \caption{Number of expected events according the exposure time for the different contributions using the tracker selection. The relative errors using the tracker selection.}
 \label{picture_number_of_expected_events_tracker_selection}
 \end{center}
@@ -1329,7 +1333,7 @@ $(\sigma / \mu)_{\text{tracker}}$ & 18.0 \% & 6.8  \% & 4.7  \% & 3.3  \% \\
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.5]{/home/lenoblet-local/Documents/latex-papers/Radon_note/pictures/rr.pdf}
+\includegraphics[scale=0.5]{pictures/Chap5/rr.pdf}
 \caption{Relative errors using the tracker selection according the exposure.}
 \label{picture_relative_error_tracker_selection}
 \end{center}
@@ -1361,7 +1365,7 @@ $(\sigma / \mu)_{\text{tracker}}$ & 8.3 \%     & 3.1  \%     & 2.1  \%     & 1.5
 \bigskip
 
 
-\noindent According to the efficiency of reconstruction of the 1e1$\alpha$ channel and the different activities measured by the collaboration, the number of expected events due to the $^{222}$Rn can be computed. The level of $^{222}$Rn coming from the tracker can be known at $\sim$8~$\%$ after one day of measurement, so, it can be measured daily. The level of $^{222}$Rn coming from the foil bulk can be known at $\sim$10~$\%$ after one week of measurement.
+\noindent According to the efficiency of reconstruction of the 1e1$\alpha$ channel and the different activities measured by the collaboration, the number of expected events due to the $^{\text{222}}$Rn can be computed. The level of $^{\text{222}}$Rn coming from the tracker can be known at $\sim$8~\% after one day of measurement, so, it can be measured daily. The level of $^{\text{222}}$Rn coming from the foil bulk can be known at $\sim$10~\% after one week of measurement.
 
 
 \end{document}
